# tg_bot

./: LICENSE  README.md  pyproject.toml
tg_bot/: bot_launcher.py
tg_bot/models/: desired_film.py  lesson.py  watched_film.py  wordcard.py
tg_bot/repository/: database.db  databases.py  sqlite_repository.py
